crates/phynix-parse/tests/stmt/snapshots/tests__stmt__decl__class_extends_implements.snap
---
source: crates/phynix-parse/tests/stmt/decl.rs
assertion_line: 30
expression: script
---
items:
  - Class:
      flags: 0
      name:
        Qualified:
          absolute: false
          parts:
            - {}
      extends:
        absolute: false
        parts:
          - {}
      implements:
        - absolute: false
          parts:
            - {}
        - absolute: false
          parts:
            - {}
      body: []
