crates/phynix-parse/tests/stmt/snapshots/tests__stmt__decl__class_modifiers.snap
---
source: crates/phynix-parse/tests/stmt/decl.rs
assertion_line: 25
expression: script
---
items:
  - Class:
      flags: 3
      name:
        Qualified:
          absolute: false
          parts:
            - {}
      extends: ~
      implements: []
      body: []
