crates/phynix-parse/tests/stmt/snapshots/tests__stmt__decl__enum_simple.snap
---
source: crates/phynix-parse/tests/stmt/decl.rs
assertion_line: 47
expression: script
---
items:
  - Enum:
      name: {}
      backed_type: ~
      implements: []
      body: []
