crates/phynix-parse/tests/stmt/snapshots/tests__stmt__decl__function_simple.snap
---
source: crates/phynix-parse/tests/stmt/decl.rs
assertion_line: 5
expression: script
---
items:
  - Function:
      name: {}
      params: []
      return_type: ~
      body:
        items: []
