crates/phynix-parse/tests/stmt/snapshots/tests__stmt__decl__function_with_return_type.snap
---
source: crates/phynix-parse/tests/stmt/decl.rs
assertion_line: 15
expression: script
---
items:
  - Function:
      name: {}
      params: []
      return_type:
        Named:
          name:
            absolute: false
            parts:
              - {}
      body:
        items: []
