crates/phynix-parse/tests/stmt/snapshots/tests__stmt__decl__interface_simple.snap
---
source: crates/phynix-parse/tests/stmt/decl.rs
assertion_line: 37
expression: script
---
items:
  - Interface:
      name: {}
      extends: []
      body: []
