crates/phynix-parse/tests/stmt/snapshots/tests__stmt__decl__special_parameter_types.snap
---
source: crates/phynix-parse/tests/stmt/decl.rs
expression: script
---
items:
  - Class:
      flags: 0
      name:
        Qualified:
          absolute: false
          parts:
            - {}
      extends: ~
      implements: []
      body:
        - Method:
            name: {}
            flags: 1
            params:
              - name: {}
                type_annotation:
                  Named:
                    name:
                      absolute: false
                      parts:
                        - {}
                flags: 0
                default: ~
              - name: {}
                type_annotation:
                  Named:
                    name:
                      absolute: false
                      parts:
                        - {}
                flags: 0
                default: ~
              - name: {}
                type_annotation:
                  Named:
                    name:
                      absolute: false
                      parts:
                        - {}
                flags: 0
                default: ~
            return_type: ~
            body:
              items: []
      attributes: []
